syntax = "proto3";

package proto;
option go_package = "gitlab.com/isard/isardvdi/orchestrator/pkg/proto";

service Orchestrator {
    rpc GetHyper(GetHyperRequest) returns (GetHyperResponse) {}
}

message GetHyperRequest {
    bool persistent = 1;
    bool gpu = 2;
}

message GetHyperResponse {
    string host = 1;
}
